<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contact Manager</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_title">Connexion</string>
    <string name="login_label">Login : </string>
    <string name="password_label">Mot de passe : </string>
    <string name="button_connexion">Se Connecter</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_label">"Recherche de personnes : "</string>
    <string name="btn_search">Rechercher</string>
    <string name="search_person_lastname">Nom</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="search_person_firstname">Prénom</string>
    <string name="abilities">Capacités :</string>

</resources>
