<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SearchET"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F1F1F"
    android:gravity="center"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".SearchActivity" >

    <TextView
        android:id="@+id/lastnameSTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_person_lastname"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#F1F1F1" />

    <EditText
        android:id="@+id/lastnameSET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/search_person_lastname"
        android:inputType="text"
        android:textColor="#F1F1F1" >

        <requestFocus android:layout_width="wrap_content" />

    </EditText>

    <TextView
        android:id="@+id/firstnameSTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/search_person_firstname"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#F1F1F1" />

    <EditText
        android:id="@+id/firstnameSET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/search_person_firstname"
        android:inputType="text"
        android:textColor="#F1F1F1" />

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/btn_search"
        android:textAlignment="center" />

</LinearLayout>